# stm32f1xx-hal-testing

./: Cargo.toml
.cargo/: config
